--- a/views/Desktop05.ejs
+++ b/views/Desktop05.ejs
@@ -21,8 +21,6 @@
                 <li><a href="/Desktop06">เช็คห้องว่าง</a></li>
                 <li><a href="/Desktop05">จองห้องติว</a></li>
                 <li><a href="/Desktop02">ออกจากระบบ</a></li>
-                
-                
             </ul>
         </div>
     </div>
@@ -50,7 +48,9 @@
                     </select>
                 </div>
             </div>
-            
+            <div class="row">
+                <input class="text1" type="text" placeholder="ชื่อผู้จอง" name="UName">
+            </div>
 
             <div class="row">
                 <input class="text3" type="date" name="Appointment_request">
